tests/a/tests/integrity/fail/struct/struct.0.stderr
error: expected {root}{root}, found {root}{c,root}
  --> tests/integrity/fail/struct/struct.0.rs:21:9
   |
21 |         string
   |         ^^^^^^
